[package]
name = "unsized_int" 
version = "0.1.0"
authors = ["IronThread <santinofuenteskillian@gmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Library hosting a number of dynamically allocated capacity,base 10 and two digits per byte."
repository = "https://github.com/IronThread/unsized_int"
keywords = ["number","unsized","dst"]
categories = []

[dependencies]
arrayvec = "0"